--- a/BeerMate/app/build.gradle
+++ b/BeerMate/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
 
-    //Firebase tools
+    //Firebase libraries
     compile 'com.google.firebase:firebase-database:9.2.1'
     compile 'com.firebaseui:firebase-ui:0.6.2'
     compile 'com.google.firebase:firebase-auth:9.2.1'
