--- a/BeerMate/app/build.gradle
+++ b/BeerMate/app/build.gradle
@@ -37,10 +37,12 @@ dependencies {
 
     //Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    
+    //Gooogle maps
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
+
 
     testCompile 'junit:junit:4.12'
 }
