--- a/BeerMate/app/src/main/AndroidManifest.xml
+++ b/BeerMate/app/src/main/AndroidManifest.xml
@@ -12,17 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".BeersListActivity" />
-        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".BeersListActivity" />
+        <activity android:name=".LoginActivity"></activity>
         <activity android:name=".RegisterActivity" />
 
         <meta-data
@@ -32,6 +29,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
